--- a/CryptoBot.fsproj
+++ b/CryptoBot.fsproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
-    </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net8.0</TargetFramework>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <Compile Include="Program.fs"/>
-    </ItemGroup>
+	<ItemGroup>
+		<Compile Include="Utils.fs"/>
+		<Compile Include="Base.fs"/>
+		<Compile Include="Ingestion.fs"/>
+		<Compile Include="Program.fs"/>
+	</ItemGroup>
 
 </Project>
