--- a/CryptoBot.fsproj
+++ b/CryptoBot.fsproj
@@ -9,6 +9,8 @@
 		<Compile Include="Utils.fs"/>
 		<Compile Include="Base.fs"/>
 		<Compile Include="Ingestion.fs"/>
+		<Compile Include="Socket.fs"/>
+		<Compile Include="Data.fs"/>
 		<Compile Include="Program.fs"/>
 	</ItemGroup>
 
