--- a/TradingLib/TradingLib.fsproj
+++ b/TradingLib/TradingLib.fsproj
@@ -9,9 +9,13 @@
 		<Compile Include="Utils.fs"/>
 		<Compile Include="Base.fs"/>
 		<Compile Include="Preprocess.fs" />
+		<Compile Include="Data.fs" />
 		<Compile Include="Socket.fs"/>
-		<Compile Include="Data.fs"/>
         <Compile Include="Adapters/Gemini.fs"/>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Websocket.Client" Version="5.1.1" />
 	</ItemGroup>
 
 </Project>
