--- a/TradingLib/TradingLib.fsproj
+++ b/TradingLib/TradingLib.fsproj
@@ -7,7 +7,7 @@
 	<ItemGroup>
 		<Compile Include="Utils.fs"/>
 		<Compile Include="Base.fs"/>
-		<Compile Include="Preprocess.fs" />
+		<Compile Include="Preprocessor.fs" />
 		<Compile Include="Data.fs" />
 		<Compile Include="Socket.fs"/>
         <Compile Include="Adapters/Gemini.fs"/>
