--- a/TradingLib/TradingLib.fsproj
+++ b/TradingLib/TradingLib.fsproj
@@ -1,20 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Compile Include="Utils.fs"/>
-		<Compile Include="Base.fs"/>
-		<Compile Include="Preprocessor.fs" />
-		<Compile Include="Data.fs" />
-		<Compile Include="Socket.fs"/>
+    <ItemGroup>
+        <Compile Include="Utils.fs"/>
+        <Compile Include="Base.fs"/>
+        <Compile Include="Buffer.fs" />
+        <Compile Include="Data.fs" />
+        <Compile Include="Socket.fs"/>
         <Compile Include="Adapters/Gemini.fs"/>
-	</ItemGroup>
+    </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="Websocket.Client" Version="5.1.1" />
-	</ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Websocket.Client" Version="5.1.1" />
+    </ItemGroup>
 
 </Project>
