--- a/TradingLib/TradingLib.fsproj
+++ b/TradingLib/TradingLib.fsproj
@@ -17,6 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Alpaca.Markets" Version="7.0.6" />
 		<PackageReference Include="Websocket.Client" Version="5.1.1" />
 	</ItemGroup>
 
