--- a/TradingLib/TradingLib.fsproj
+++ b/TradingLib/TradingLib.fsproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Alpaca.Markets" Version="7.0.6" />
+		<PackageReference Include="Alpaca.Markets.Extensions" Version="7.0.0" />
 		<PackageReference Include="Websocket.Client" Version="5.1.1" />
 	</ItemGroup>
 
