--- a/TradingLib/TradingLib.fsproj
+++ b/TradingLib/TradingLib.fsproj
@@ -13,9 +13,12 @@
 		<Compile Include="Data.fs" />
 		<Compile Include="Socket.fs"/>
 		<Compile Include="Adapters/Gemini.fs"/>
+		<Compile Include="Adapters/Alpaca.fs"/>
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Alpaca.Markets" Version="7.0.6" />
+		<PackageReference Include="Alpaca.Markets.Extensions" Version="7.0.0" />
 		<PackageReference Include="Websocket.Client" Version="5.1.1" />
 	</ItemGroup>
 
