--- a/TradingLib/TradingLib.fsproj
+++ b/TradingLib/TradingLib.fsproj
@@ -6,7 +6,7 @@
 
 	<ItemGroup>
 		<Compile Include="Utils.fs"/>
-		<Compile Include="Fraction.fs" />
+		<Compile Include="Numbers.fs" />
 		<Compile Include="Common.fs" />
 		<Compile Include="Base.fs"/>
 		<Compile Include="Buffer.fs" />
